# video_analytics_Intel_GPU

./: CMakeLists.txt  Dockerfile  README.md  env.sh  install.py  install_OCL_driver.sh  prerequisites_install_ubuntu.py  vait_prerequisites_install_ubuntu.py
common/: CMakeLists.txt  cleanup.sh  common.hpp  common_directx11.cpp  common_utils.cpp  common_utils.h  common_utils_linux.cpp  common_utils_windows.cpp  common_vaapi.cpp  common_vaapi.h
ie_plugin/: CMakeLists.txt  readme.txt
ie_plugin/ie_plugin/: CMakeLists.txt  detection_results.cpp  detection_results.h  ie_plugin.h  image_to_input.cpp  image_to_input.h  network.cpp  network.h  object_detector.cpp  object_detector.h  plugin_selector.cpp  plugin_selector.h  utils.cpp  utils.h
multiDecoding/: CMakeLists.txt  configuration.hpp  default.hpp  fastcopy.cpp  image.cpp  image.hpp  image_queue.cpp  image_queue.hpp  main.cpp  scheduler.cpp  scheduler.hpp  utility.hpp
multiDecoding/RPC/: CMakeLists.txt  README.md  configuration.cpp  configuration_test.cpp  default.hpp  example_config.json  feature.hpp  feature_queue.cpp  feature_queue.hpp  feature_queue_test.cpp  image.cpp  image_queue.cpp  image_queue.hpp  image_queue_test.cpp  object.cpp  object.hpp  object_queue.cpp  object_queue.hpp  object_queue_test.cpp  object_test.cpp  scheduler_test.cpp  utility.cpp
multiDecoding/RPC/network/: config.client  config.server  remote_interface.cpp  remote_interface.hpp  remote_processor.cpp  remote_processor.h  remote_processor.ice  remote_processorI.cpp  remote_processorI.h  remote_processor_test.cpp  server_test.cpp
multiDecoding/rtsp/: rtspClient.cpp  rtspWrapper.cpp  rtspWrapper.h
test_content/IR/SSD/: SSD_GoogleNet_v2_fp16.xml  SSD_ResNet18_480_FP16.xml  SSD_ResNet18_FP16.xml  ssd_resnet18.prototxt
test_content/IR/SSD_mobilenet/: MobileNet-SSD.xml
test_content/video/: cat_720x720.h264
vait_framework/: CMakeLists.txt
vait_framework/include/: exception.h  memory.h  types.h  worker.h
vait_framework/memories/: OCV_RGB_Frame_Memory.h  SSD_ROI_memory.h
vait_framework/samples/sample1_single/: CMakeLists.txt  main.cpp
vait_framework/samples/sample2_multi/: CMakeLists.txt  main.cpp
vait_framework/samples/test/: CMakeLists.txt  main.cpp
vait_framework/workers/file_render/: CMakeLists.txt  file_render.cpp  file_render.h
vait_framework/workers/inference/: CMakeLists.txt  inference.cpp  inference.h
vait_framework/workers/ocv_reader/: CMakeLists.txt  OCV_reader.cpp  OCV_reader.h
vait_framework/workers/ocv_render/: CMakeLists.txt  OCV_render.cpp  OCV_render.h
video_analytics_example/: CMakeLists.txt  SetupSurface.cpp  SetupSurface.h  XCBShow.cpp  XCBShow.hpp  box.h  bufferqueue.h  detector.cpp  detector.hpp  dpipe.cpp  dpipe.h  fhog.cpp  intelscalar.cpp  kcftracker.cpp  main.cpp  main.h  my_ie.cpp  my_ie.h  recttools.hpp
video_analytics_example/cmake/: FindFFmpeg.cmake
